--- a/package.json
+++ b/package.json
@@ -24,5 +24,22 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.7",
+        "@radix-ui/react-avatar": "^1.1.4",
+        "@radix-ui/react-dialog": "^1.1.7",
+        "@radix-ui/react-dropdown-menu": "^2.1.7",
+        "@radix-ui/react-progress": "^1.1.3",
+        "@radix-ui/react-scroll-area": "^1.2.4",
+        "@radix-ui/react-select": "^2.1.7",
+        "@radix-ui/react-slot": "^1.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.488.0",
+        "next-themes": "^0.4.6",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
