--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
         "@radix-ui/react-scroll-area": "^1.2.4",
         "@radix-ui/react-select": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.0",
+        "chart.js": "^4.4.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lodash": "^4.17.21",
         "lucide-react": "^0.488.0",
         "next-themes": "^0.4.6",
+        "react-chartjs-2": "^5.3.0",
         "react-icons": "^5.5.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
