--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "react-icons": "^5.5.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "ziggy-js": "^2.5.3"
     }
 }
